--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/compression": "^1.7.2",
     "@types/errorhandler": "^1.5.0",
     "@types/express": "4.17.13",
+    "@types/glob": "^7.2.0",
     "@types/supertest": "^2.0.12",
     "assert": "^2.0.0",
     "husky": "^7.0.4",
@@ -33,7 +34,9 @@
     "errorhandler": "^1.5.1",
     "express-promise-router": "^4.1.1",
     "helmet": "^5.0.2",
-    "http-status": "^1.5.1"
+    "http-status": "^1.5.1",
+    "node-dependency-injection": "^2.7.3",
+    "winston": "^3.7.2"
   },
   "husky": {
     "hooks": {
