--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/errorhandler": "^1.5.0",
     "@types/express": "4.17.13",
     "@types/glob": "^7.2.0",
+    "@types/jest": "^27.4.1",
     "@types/supertest": "^2.0.12",
     "assert": "^2.0.0",
     "husky": "^7.0.4",
