feat (di): add new dependencies to the container

--- a/src/apps/challenge/dependency-injection/application_test.yaml
+++ b/src/apps/challenge/dependency-injection/application_test.yaml
@@ -1,2 +1,7 @@
 imports:
   - { resource: ./application.yaml }
+
+services:
+  Challenge.EnvironmentArranger:
+    class: ../../../../tests/Contexts/Shared/infrastructure/redis/RedisEnvironmentArranger
+    arguments: ['@Shared.ConnectionManager']
