--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev:challenge": "NODE_ENV=dev ts-node-dev --ignore-watch node_modules ./src/apps/challenge/start.ts",
-    "test:challenge:features": "NODE_ENV=test cucumber-js -p challenge",
+    "test:challenge:features": "NODE_ENV=test cucumber-js -p challenge --publish-quiet",
     "test:unit": "NODE_ENV=test jest",
     "test:features": "npm run test:challenge:features",
     "test": "npm run test:unit && npm run test:features",
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@cucumber/cucumber": "^8.0.0",
     "@types/compression": "^1.7.2",
+    "@types/convict": "^6.1.1",
     "@types/errorhandler": "^1.5.0",
     "@types/express": "4.17.13",
     "@types/glob": "^7.2.0",
@@ -31,12 +32,16 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "body-parser": "^1.20.0",
     "compression": "^1.7.4",
+    "convict": "^6.2.2",
     "errorhandler": "^1.5.1",
     "express-promise-router": "^4.1.1",
     "helmet": "^5.0.2",
     "http-status": "^1.5.1",
     "node-dependency-injection": "^2.7.3",
+    "redis": "^4.0.6",
     "winston": "^3.7.2"
   },
   "husky": {
