--- a/src/apps/challenge/dependency-injection/application.yaml
+++ b/src/apps/challenge/dependency-injection/application.yaml
@@ -1,7 +1,8 @@
 imports:
   - { resource: ./Shared/application.yaml }
+  - { resource: ./Address/application.yaml }
 
 services:
   Apps.challenge.controllers.CheckAddressPostController:
     class: ../controllers/CheckAddressPostController
-    arguments: []
+    arguments: ["@Challenge.Address.AddressValidator"]
