--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x, 16.x]
+        redis-version: [4, 5, 6]
 
     steps:
       - uses: actions/checkout@v1
@@ -16,6 +17,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Start Redis
+        uses: supercharge/redis-github-action@1.4.0
+        with:
+          redis-version: ${{ matrix.redis-version }
       - name: npm install
         run: |
           npm install
