--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "compression": "^1.7.4",
     "convict": "^6.2.2",
     "errorhandler": "^1.5.1",
+    "express": "^4.17.3",
     "express-promise-router": "^4.1.1",
     "helmet": "^5.0.2",
     "http-status": "^1.5.1",
