--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "license": "",
   "devDependencies": {
     "@cucumber/cucumber": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.2",
     "@types/convict": "^6.1.1",
     "@types/errorhandler": "^1.5.0",
     "@types/express": "4.17.13",
     "@types/glob": "^7.2.0",
     "@types/jest": "^27.4.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/supertest": "^2.0.12",
     "assert": "^2.0.0",
     "husky": "^7.0.4",
@@ -33,6 +35,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "convict": "^6.2.2",
@@ -41,6 +44,9 @@
     "express-promise-router": "^4.1.1",
     "helmet": "^5.0.2",
     "http-status": "^1.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.5.0",
+    "mongoose": "^6.3.0",
     "node-dependency-injection": "^2.7.3",
     "redis": "^4.0.6",
     "winston": "^3.7.2"
