--- a/src/apps/challenge/dependency-injection/application.yaml
+++ b/src/apps/challenge/dependency-injection/application.yaml
@@ -1,8 +1,18 @@
 imports:
   - { resource: ./Shared/application.yaml }
   - { resource: ./Address/application.yaml }
+  - { resource: ./User/application.yaml }
 
 services:
   Apps.challenge.controllers.CheckAddressPostController:
     class: ../controllers/CheckAddressPostController
     arguments: ["@Challenge.Address.AddressValidator"]
+
+  Apps.challenge.controllers.LoginPostController:
+    class: ../controllers/LoginPostController
+    arguments: ["@Challenge.User.UserLogin", "@Shared.AuthConfig"]
+
+  Apps.challenge.controllers.RegisterPostController:
+    class: ../controllers/RegisterPostController
+    arguments: ["@Challenge.User.UserRegister"]
+
