feat: implement controller for passing acceptance tests

--- a/src/apps/challenge/dependency-injection/application.yaml
+++ b/src/apps/challenge/dependency-injection/application.yaml
@@ -16,3 +16,7 @@ services:
     class: ../controllers/RegisterPostController
     arguments: ["@Challenge.User.UserRegister"]
 
+  Apps.challenge.controllers.CheckWeatherGetController:
+    class: ../controllers/CheckWeatherGetController
+    arguments: []
+
