--- a/src/apps/challenge/dependency-injection/application.yaml
+++ b/src/apps/challenge/dependency-injection/application.yaml
@@ -2,6 +2,7 @@ imports:
   - { resource: ./Shared/application.yaml }
   - { resource: ./Address/application.yaml }
   - { resource: ./User/application.yaml }
+  - { resource: ./Weather/application.yaml }
 
 services:
   Apps.challenge.controllers.CheckAddressPostController:
@@ -18,5 +19,5 @@ services:
 
   Apps.challenge.controllers.CheckWeatherGetController:
     class: ../controllers/CheckWeatherGetController
-    arguments: []
+    arguments: ["@Challenge.Weather.WeatherFinder"]
 
