feat(auth)!: add authentication

--- a/src/apps/challenge/dependency-injection/User/application.yaml
+++ b/src/apps/challenge/dependency-injection/User/application.yaml
@@ -5,7 +5,7 @@ services:
 
   Challenge.User.UserLogin:
     class: ../../../../Contexts/Challenge/User/application/UserLogin
-    arguments: ["@Challenge.User.UserRepository"]
+    arguments: ["@Challenge.User.UserRepository", "@Shared.AuthConfig"]
 
   Challenge.User.UserRegister:
     class: ../../../../Contexts/Challenge/User/application/UserRegister
