--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,10 @@ x-app-service: &default-app
   command: ''
   environment:
     - MONGO_URL=mongodb://mongo:27017/dev
+    - REDIS_URL=redis://redis:6379
   depends_on:
     - mongo
+    - redis
 
   volumes:
     - .:/code:delegated
@@ -18,7 +20,7 @@ services:
 
   challenge:
     <<: *default-app
-    command: bash -c "npm run dev:challenge"
+    command: bash -c "npm run build && npm run start:challenge"
     ports:
       - 3000:3000
 
@@ -28,6 +30,11 @@ services:
     ports:
       - 27017:27017
 
+  redis:
+    image: redis
+
+    ports:
+      - 6379:6379
 
 volumes:
   node_modules:
