--- a/package.json
+++ b/package.json
@@ -2,13 +2,25 @@
   "name": "wefox-challenge",
   "version": "1.0.0",
   "description": "",
+  "repository": {
+    "url": "https://github.com/djnogales/wefox-challenge"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">8.0.0"
+  },
   "scripts": {
     "dev:challenge": "NODE_ENV=dev ts-node-dev --ignore-watch node_modules ./src/apps/challenge/start.ts",
+    "start:challenge": "NODE_ENV=production node dist/src/apps/challenge/start",
     "test:challenge:features": "NODE_ENV=test cucumber-js -p challenge --publish-quiet",
     "test:unit": "NODE_ENV=test jest",
     "test:features": "npm run test:challenge:features",
     "test": "npm run test:unit && npm run test:features",
-    "lint": "tslint src/**/*.ts{,x}"
+    "lint": "tslint src/**/*.ts{,x}",
+    "build": "npm run build:clean && npm run build:tsc && npm run build:di",
+    "build:tsc": "tsc -p tsconfig.prod.json",
+    "build:di": "copy 'src/**/*.{json,yaml}' dist/src",
+    "build:clean": "rm -r dist; exit 0"
   },
   "author": "Javier Nogales",
   "license": "",
@@ -22,6 +34,7 @@
     "@types/glob": "^7.2.0",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^17.0.24",
     "@types/supertest": "^2.0.12",
     "assert": "^2.0.0",
     "husky": "^7.0.4",
@@ -30,8 +43,7 @@
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.4",
     "ts-node-dev": "^1.1.8",
-    "tslint": "^6.1.3",
-    "typescript": "^4.6.3"
+    "tslint": "^6.1.3"
   },
   "dependencies": {
     "axios": "^0.26.1",
@@ -39,9 +51,12 @@
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "convict": "^6.2.2",
+    "copy": "^0.3.2",
+    "copyfiles": "^2.4.1",
     "errorhandler": "^1.5.1",
     "express": "^4.17.3",
     "express-promise-router": "^4.1.1",
+    "glob": "^8.0.1",
     "helmet": "^5.0.2",
     "http-status": "^1.5.1",
     "jsonwebtoken": "^8.5.1",
@@ -49,6 +64,8 @@
     "mongoose": "^6.3.0",
     "node-dependency-injection": "^2.7.3",
     "redis": "^4.0.6",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.6.3",
     "winston": "^3.7.2"
   },
   "husky": {
