refactor: refactor tests and routes

--- a/src/apps/challenge/dependency-injection/application.yaml
+++ b/src/apps/challenge/dependency-injection/application.yaml
@@ -3,25 +3,4 @@ imports:
   - { resource: ./Address/application.yaml }
   - { resource: ./User/application.yaml }
   - { resource: ./Weather/application.yaml }
-
-services:
-  Apps.challenge.controllers.CheckAddressPostController:
-    class: ../controllers/CheckAddressPostController
-    arguments: ["@Challenge.Address.AddressValidator"]
-
-  Apps.challenge.controllers.LoginPostController:
-    class: ../controllers/LoginPostController
-    arguments: ["@Challenge.User.UserLogin"]
-
-  Apps.challenge.controllers.RegisterPostController:
-    class: ../controllers/RegisterPostController
-    arguments: ["@Challenge.User.UserRegister"]
-
-  Apps.challenge.controllers.CheckWeatherGetController:
-    class: ../controllers/CheckWeatherGetController
-    arguments: ["@Challenge.Weather.WeatherFinder"]
-
-  Apps.challenge.middlewares.AuthMiddleware:
-    class: ../middlewares/AuthMiddleware
-    arguments: ["@Shared.AuthConfig"]
-
+  - { resource: ./apps/application.yaml }
